2009-01-09 version 0.4:

  * New method in generated classes:

      my @fields = $message->fields();

    @fields is an array of strings.  Each string corresponds to the
    name of a class member.  Contributed by Seth Daniel.

  * New method in generated classes:

      my $hashref = $message->to_hashref();

    $hashref is a complete, Data::Dumper-style recursive dump of the
    message and all of its embedded messages.

  * Extended methods copy_from() and merge_from():

    In addition to their pre-existing ability to copy and merge a
    message instance from another instance of the same message type,
    these methods may also be used with a hashref argument, of the
    sort that might be generated by the to_hashref() method.  This
    makes it easy to build messages from hashrefs:

      my $message = Foo->new;
      $message->copy_from({ bar => 'baz', bat => 'qux' });

    Note that for both of these methods, failure to provide a
    hash value for any of the required fields of a message is
    silently ignored, for the following reasons:

    1) In some cases, the user may wish to build the message one
       part at a time via merge_from() of multiple different 
       hashrefs, ultimately yielding a complete message instance.

    2) In any case, missing required fields will be reported when
       the user unsuccessfully attempts to serialize the message.

  * Extended message constructors

    It is now possible to instantiate a message with a hashref as
    the sole constructor argument:

      my $message = Foo->new({ bar => 'baz', bat => 'qux' });

    This is equivalent to:

      my $message = Foo->new;
      $message->copy_from({ bar => 'baz', bat => 'qux' });

    It is also possible to instantiate a message with a scalar as
    the sole constructor argument:

      my $packed = Foo->new({ bar => 'baz'})->pack;
      my $foo2 = Foo->new($packed);

    In this case, the scalar is interpreted as a packed message
    of the given type.
